tests/snapshots/tui/start_runpod_120x40.snap
---
source: src/tui/snapshots.rs
assertion_line: 602
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ╭ Start a training run? ───────────────────────────────────────────────╮                        "
"                        │                                                                      │                        "
"                        │  target      gpu_cloud (runpod, Secure Cloud)                        │                        "
"                        │  model       Qwen/Qwen3-4B, qlora, 3 epochs, lr 2e-4                 │                        "
"                        │  data        data/train.jsonl 1234 examples, data/eval.jsonl 137     │                        "
"                        │  warning     qwen2 renders no reasoning_content (see the logs)       │                        "
"                        │  vram        about 19.1 GB per GPU (estimate)                        │                        "
"                        │  GPU types   tried in order, list price x 1 GPU, VRAM, stock, fit:   │                        "
"                        │  - NVIDIA GeForce RTX 4090  $0.69/h   24 GB  MEDIUM  ok              │                        "
"                        │  - NVIDIA RTX A6000         $0.49/h   48 GB  LOW     ok              │                        "
"                        │  - NVIDIA A40               not in the catalog                       │                        "
"                        │  datacenters any                                                     │                        "
"                        │  max_hours   6: the watchdog deletes the pod by then, about $4.14    │                        "
"                        │  at most at the highest listed rate (some prices unknown)            │                        "
"                        │  The run keeps going when you leave this view or quit; attach again  │                        "
"                        │  here or with `overbrainer train attach <run-id>`.                   │                        "
"                        │                                                                      │                        "
"                        │                                                y start    n cancel   │                        "
"                        │                                                                      │                        "
"                        ╰──────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" y start · g GPU types · c data centers · n, Esc or Enter cancel                                                 ? help "
