tests/snapshots/tui/start_runpod_changed_120x40.snap
---
source: src/tui/snapshots.rs
assertion_line: 603
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ╭ Start a training run? ───────────────────────────────────────────────╮                        "
"                        │                                                                      │                        "
"                        │  target      gpu_cloud (runpod, Secure Cloud)                        │                        "
"                        │  model       Qwen/Qwen3-4B, qlora, 3 epochs, lr 2e-4                 │                        "
"                        │  data        data/train.jsonl 1234 examples, data/eval.jsonl 137     │                        "
"                        │  warning     warning number 1 about this run                         │                        "
"                        │  warning     warning number 2 about this run                         │                        "
"                        │  warning     warning number 3 about this run                         │                        "
"                        │  warning     warning number 4 about this run                         │                        "
"                        │  changed     gpu_types: saved to overbrainer.toml on y, then the     │                        "
"                        │  run starts                                                          │                        "
"                        │  vram        about 20.4 GB per GPU (estimate): auto keeps >= 21 GB   │                        "
"                        │  GPU types   auto picks now, list price x 1 GPU, VRAM, stock, fit:   │                        "
"                        │  - NVIDIA A40               $0.40/h   48 GB  HIGH    ok              │                        "
"                        │  - NVIDIA L4                $0.43/h   24 GB  HIGH    ok              │                        "
"                        │  - NVIDIA RTX A6000         $0.49/h   48 GB  LOW     ok              │                        "
"                        │  - NVIDIA GeForce RTX 4090  $0.69/h   24 GB  MEDIUM  ok              │                        "
"                        │  - and 2 more                                                        │                        "
"                        │  datacenters any                                                     │                        "
"                        │  max_hours   6: the watchdog deletes the pod by then, about $17.94   │                        "
"                        │  at most at the highest listed rate                                  │                        "
"                        │  The run keeps going when you leave this view or quit; attach again  │                        "
"                        │  here or with `overbrainer train attach <run-id>`.                   │                        "
"                        │                                                                      │                        "
"                        │                                                y start    n cancel   │                        "
"                        │                                                                      │                        "
"                        ╰──────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" y start · g GPU types · c data centers · n, Esc or Enter cancel                                                 ? help "
