tests/snapshots/tui/start_runpod_changed_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ o╭ Start a training run? ───────────────────────────────────────────────╮ex… "
"╭ r │                                                                      │ ──╮"
"│ N │  target      gpu_cloud (runpod, Secure Cloud)                        │   │"
"╰── │  model       Qwen/Qwen3-4B, qlora, 3 epochs, lr 2e-4                 │ ──╯"
"    │  data        data/train.jsonl 1234 examples, data/eval.jsonl 137     │    "
"    │  warning     warning number 1 about this run                         │    "
"    │  warning     warning number 2 about this run                         │    "
"    │  warning     warning number 3 about this run                         │    "
"    │  warning     warning number 4 about this run                         │    "
"    │  changed     gpu_types: saved to overbrainer.toml on y, then the     │    "
"    │  run starts                                                          │    "
"    │  GPU types   auto picks now, list price x 1 GPU, VRAM, stock:        │    "
"    │  - NVIDIA RTX 2000 Ada Generation  $0.24/h        16 GB  HIGH        │    "
"    │  - NVIDIA A40                      $0.40/h        48 GB  HIGH        │    "
"    │  - NVIDIA L4                       $0.43/h        24 GB  HIGH        │    "
"    │  - NVIDIA RTX A6000                $0.49/h        48 GB  LOW         │    "
"    │  - and 3 more                                                        │    "
"    │  …                                                                   │    "
"    │  max_hours   6: the watchdog deletes the pod by then, about $17.94   │    "
"    │  at most at the highest listed rate                                  │    "
"    │                                                                      │    "
"    │                                                y start    n cancel   │    "
"    │                                                                      │    "
" y s╰──────────────────────────────────────────────────────────────────────╯elp "
