tests/snapshots/tui/start_runpod_looking_up_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                              │"
"╰──                                                                          ──╯"
"    ╭ Start a training run? ───────────────────────────────────────────────╮    "
"    │                                                                      │    "
"    │  target      gpu_cloud (runpod, Secure Cloud)                        │    "
"    │  model       Qwen/Qwen3-4B, qlora, 3 epochs, lr 2e-4                 │    "
"    │  data        data/train.jsonl 1234 examples, data/eval.jsonl 137     │    "
"    │  warning     qwen2 renders no reasoning_content (see the logs)       │    "
"    │  GPU types   tried in order, list price x 1 GPU:                     │    "
"    │  - NVIDIA GeForce RTX 4090    looking up list prices...              │    "
"    │  - NVIDIA RTX A6000           looking up list prices...              │    "
"    │  - NVIDIA A40                 looking up list prices...              │    "
"    │  max_hours   6: the watchdog deletes the pod by then                 │    "
"    │  The run keeps going when you leave this view or quit; attach again  │    "
"    │  here or with `overbrainer train attach <run-id>`.                   │    "
"    │                                                                      │    "
"    │                                                y start    n cancel   │    "
"    │                                                                      │    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                                "
"                                                                                "
" y start · n, Esc or Enter cancel                    … preparing a run · ? help "
