tests/snapshots/tui/start_ssh_120x40.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs                                       rust_expert "
"╭ runs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮"
"│ No runs yet: press t to start one on gpu_cloud.                                                                      │"
"╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                        ╭ Start a training run? ───────────────────────────────────────────────╮                        "
"                        │                                                                      │                        "
"                        │  target      homelab (ssh, docker)                                   │                        "
"                        │  model       Qwen/Qwen3-4B, qlora, 3 epochs, lr 2e-4                 │                        "
"                        │  data        data/train.jsonl 1234 examples, data/eval.jsonl 137     │                        "
"                        │  The run keeps going when you leave this view or quit; attach again  │                        "
"                        │  here or with `overbrainer train attach <run-id>`.                   │                        "
"                        │                                                                      │                        "
"                        │                                                y start    n cancel   │                        "
"                        │                                                                      │                        "
"                        ╰──────────────────────────────────────────────────────────────────────╯                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
" y start · n, Esc or Enter cancel                                                                                ? help "
