tests/snapshots/tui/too_small_79x24.snap
---
source: src/tui/snapshots.rs
---
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"              terminal too small: 80x24 needed, this one is 79x24              "
"                                    q quits                                    "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
"                                                                               "
