tests/snapshots/tui/training_cancel_80x24.snap
---
source: src/tui/snapshots.rs
---
" ⠿ overbrainer   1 Project  2 Dataset  3 Pipeline  4 Training  5 Logs  rust_ex… "
"╭ runs ────────────────────────────────────────────────────────────────────────╮"
"│ run                   state      target     pod                              │"
"│ 20260921-133200-a1b2  running    gpu_cloud  ready k3x9abc $0.53/h followed   │"
"│ 20260920-101500-9f00  succeeded  homelab                                     │"
"│ 20260919-090000-c3d4  running    homelab                                     │"
"╰──────────────────────────────────────────────────────────────────────────────╯"
"  ●                                                                             "
"  e ╭ Cancel a run? ───────────────────────────────────────────────────────╮    "
"  p │                                                                      │    "
"  2 │  Cancel run 20260921-133200-a1b2 on gpu_cloud? Its job is stopped    │    "
"  l │  (its container first), what it produced is retrieved best effort,   │ l  "
"  1 │  and for Runpod the pod is then ended. This cannot be undone.        │    "
"    │                                                                      │    "
"    │                                      y cancel the run    n keep it   │    "
"    │                                                                      │    "
"    ╰──────────────────────────────────────────────────────────────────────╯    "
"                                                                             •  "
"  0.80  │                                                 ▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀   "
"        └─────────────────────────────────────────────────────────────────────  "
"  step 10                                                                 1200  "
"  lr        ▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄ 2.00e-4    "
"  grad_norm  ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█ ▂▄▆█  0.700      "
" y cancel the run · n, Esc or Enter keep it          … 1 training task · ? help "
